<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/brown_border"
        android:hint="@string/nome"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:text="admin"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBorder"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNome"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/brown_border"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="12dp"
        android:text="123"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBorder"
        android:textSize="16dp" />
    <TextView
        android:id="@+id/txtNavNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAcessar"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/acessar" />
    </LinearLayout>

</LinearLayout>