<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Extra1Activity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button3"
            android:layout_width="121dp"
            android:layout_height="98dp"
            android:layout_marginBottom="207dp"
            android:background="@android:drawable/spinner_background"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:elevation="6dp"
            android:onClick="mudarView"
            android:text="@string/botaoC3"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.224"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="121dp"
            android:layout_height="98dp"
            android:layout_marginBottom="330dp"
            android:background="@android:drawable/spinner_background"
            android:backgroundTint="@android:color/holo_blue_light"
            android:elevation="6dp"
            android:onClick="mudarView"
            android:text="@string/botaoB2"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.825"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/button4"
            android:layout_width="121dp"
            android:layout_height="98dp"
            android:layout_marginBottom="207dp"
            android:background="@android:drawable/spinner_background"
            android:backgroundTint="@android:color/holo_red_light"
            android:elevation="6dp"
            android:onClick="mudarView"
            android:text="@string/botaoD4"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.825"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="121dp"
            android:layout_height="98dp"
            android:layout_marginBottom="83dp"
            android:background="@android:drawable/spinner_background"
            android:backgroundTint="@color/yellow"
            android:elevation="6dp"
            android:onClick="mudarView"
            android:text="@string/botaoE5"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.224"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/button6"
            android:layout_width="121dp"
            android:layout_height="98dp"
            android:layout_marginBottom="83dp"
            android:background="@android:drawable/spinner_background"
            android:backgroundTint="@color/brown"
            android:elevation="6dp"
            android:onClick="mudarView"
            android:text="@string/botaoF6"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.825"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/button1"
            android:layout_width="121dp"
            android:layout_height="98dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="330dp"
            android:background="@android:drawable/spinner_background"
            android:backgroundTint="@color/green"
            android:elevation="6dp"
            android:onClick="mudarView"
            android:text="@string/botaoA1"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.224"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonReiniciar"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp"
            android:layout_marginBottom="25dp"
            android:background="@android:drawable/alert_dark_frame"
            android:max="6"
            android:progress="0"
            android:progressTint="@android:color/holo_red_dark"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/progressBarView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button6"
            app:layout_constraintVertical_bias="0.142"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/progressBarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="11dp"
            android:fontFamily="cursive"
            android:text="@string/progresso"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintRight_toLeftOf="@+id/button6"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/buttonReiniciar"
            android:layout_width="193dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:onClick="restart"
            android:text="@string/reinciar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/textViewPara1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginBottom="1dp"
            android:text="@string/parabens1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/button4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button2"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/textViewPara2"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginBottom="37dp"
            android:text="@string/parabens2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/btnConcluirExtra1"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="56dp"
            android:layout_marginBottom="37dp"
            android:onClick="concluir"
            android:text="@string/concluir"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
